Proteccion rutas y mejora de navegacion
Se utiliza Guard para proteger el acceso a rutas si no estás autenticado (por parte del front-end) y se mejora la navegación de entrar y salir de la sesion entre otros detalles.
Se añade token interceptor para poder enviar la cabecera de autorizacion en cada peticion

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,12 +16,19 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/signin" routerLinkActive="active">Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/signup" routerLinkActive="active">Registro</a>
-      </li>
+      <ng-container *ngIf="!authService.loggedIn(); else loggedIn">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/signin" routerLinkActive="active">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/signup" routerLinkActive="active">Registro</a>
+        </li>
+      </ng-container>
+      <ng-template #loggedIn>
+        <li class="nav-item">
+          <a class="nav-link" style="cursor: pointer;" (click)="authService.logout()">Cerrar Sesión</a>
+        </li>
+      </ng-template>
     </ul>
   </div>
 </nav>
