--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -26,14 +26,14 @@
         
         <div class="col-xs-6">
             <label for="password"><h4>Password</h4></label>
-            <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
+            <input type="password" class="form-control" name="password" id="password" placeholder="Contraseña" title="enter your password.">
         </div>
     </div>
     <div class="form-group">
         
         <div class="col-xs-6">
-          <label for="password2"><h4>Verify</h4></label>
-            <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
+          <label for="password2"><h4>Comprobar password</h4></label>
+            <input type="password" class="form-control" name="password2" id="password2" placeholder="Reescriba su contraseña" title="enter your password2.">
         </div>
     </div>
     <div class="form-group">
