--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,16 +1,21 @@
 <form class="form" action="##" method="post" id="registrationForm">
     <div class="form-group">
-        
+    <div class="col-xs-6">
+        <label for="first_name"><h4>Usuario</h4></label>
+        <input type="text" class="form-control" [(ngModel)]="user.username" name="username" id="username" placeholder="Nombre de usuario">
+    </div>
+    </div>
+    <div class="form-group">
         <div class="col-xs-6">
             <label for="first_name"><h4>Nombre</h4></label>
-            <input type="text" class="form-control" name="first_name" id="first_name" placeholder="Nombre" title="enter your first name if any.">
+            <input type="text" class="form-control" [(ngModel)]="user.nombre" name="first_name" id="first_name" placeholder="Nombre">
         </div>
     </div>
     <div class="form-group">
         
         <div class="col-xs-6">
           <label for="last_name"><h4>Apellidos</h4></label>
-            <input type="text" class="form-control" name="last_name" id="last_name" placeholder="Apellidos" title="enter your last name if any.">
+            <input type="text" class="form-control"  [(ngModel)]="user.apellido"name="last_name" id="last_name" placeholder="Apellidos">
         </div>
     </div>
 
@@ -18,29 +23,14 @@
         
         <div class="col-xs-6">
             <label for="email"><h4>Email</h4></label>
-            <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-        </div>
-    </div>
-
-    <div class="form-group">
-        
-        <div class="col-xs-6">
-            <label for="password"><h4>Password</h4></label>
-            <input type="password" class="form-control" name="password" id="password" placeholder="Contraseña" title="enter your password.">
-        </div>
-    </div>
-    <div class="form-group">
-        
-        <div class="col-xs-6">
-          <label for="password2"><h4>Comprobar password</h4></label>
-            <input type="password" class="form-control" name="password2" id="password2" placeholder="Reescriba su contraseña" title="enter your password2.">
+            <input type="email" class="form-control" [(ngModel)]="user.email" name="email" id="email" placeholder="you@email.com">
         </div>
     </div>
     <div class="form-group">
          <div class="col-xs-12">
               <br>
                 <button class="btn btn-lg btn-success" type="submit"><i class="fas fa-check"></i> GUARDAR</button>
-                 <button class="btn btn-lg" type="reset"><i class="fas fa-undo"></i> DESHACER CAMBIOS </button>
+                 <button class="btn btn-lg" (click)="discardChanges()"><i class="fas fa-undo" ></i> DESHACER CAMBIOS </button>
           </div>
     </div>
 </form>
