--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -7,6 +7,9 @@
             <div class="card-body">
                 <form (submit)="signUp()">
                     <div class="form-group">
+                    <div class="form-group">
+                        <input type="text" [(ngModel)]="user.username" name="username" class="form-control" placeholder="Nombre de usuario" required>
+                    </div>
                         <input type="text" [(ngModel)]="user.nombre" name="nombre" class="form-control" placeholder="Nombre" required>
                     </div>
                     <div class="form-group">
