--- a/frontend/src/app/components/inicio/inicio.component.html
+++ b/frontend/src/app/components/inicio/inicio.component.html
@@ -6,21 +6,7 @@
   </div>
   <div class="col-md-6" >
     <div class="ml-2 border border-dark" style="background-color: lightgray;">
-      asdhfasbddfjkbasdkjfasdfasd
-      asdfasdfa
-      sdf
-      asdf
-      asdfasdf
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-
-     sdafasdf
+      <app-otro-perfil></app-otro-perfil>
     </div>
   </div>
 </div>
