--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -28,6 +28,47 @@
           </div>
       </div>
 
+
+      <div class="form-group">
+
+          <div class="col-xs-6">
+              <label for="sector"><h4>Sector</h4></label>
+              <input type="text" class="form-control" [(ngModel)]="user.sector" name="sector" id="sector" placeholder="sector">
+          </div>
+     </div>
+
+     <div class="form-group">
+
+          <div class="col-xs-6">
+              <label for="aficiones"><h4>aficiones</h4></label>
+              <input type="text" class="form-control" [(ngModel)]="user.aficiones" name="aficiones" id="aficiones" placeholder="aficiones">
+          </div>
+    </div>
+
+    <div class="form-group">
+
+          <div class="col-xs-6">
+              <label for="fechaNacimiento"><h4>Fecha de nacimiento</h4></label>
+              <input type="text" class="form-control" [(ngModel)]="user.fechaNacimiento" name="fechaNacimiento" id="fechaNacimiento" placeholder="00-00-0000">
+         </div>
+    </div>
+
+    <div class="form-group">
+
+          <div class="col-xs-6">
+              <label for="cp"><h4>Código postal</h4></label>
+              <input type="text" class="form-control" [(ngModel)]="user.cp" name="cp" id="cp" placeholder="00000">
+          </div>
+    </div>
+
+    <div class="form-group">
+
+          <div class="col-xs-6">
+              <label for="trabajo"><h4>Trabajo</h4></label>
+              <input type="text" class="form-control" [(ngModel)]="user.trabajo" name="trabajo" id="trabajo" placeholder="Universidad de alicante">
+          </div>
+    </div>
+
       <div class="form-group">
           <div class="col-xs-12">
                 <br>
