--- a/frontend/src/app/components/friends/friends.component.html
+++ b/frontend/src/app/components/friends/friends.component.html
@@ -1,1 +1,30 @@
-<p>friends works!</p>
+
+
+
+<div *ngFor="let element of relaciones" class="border border-dark mb-5" style="background-color: lightgray;">
+
+  <div class="row align-items-center">
+    <div class="col-1" style=" height:100px; width: 100px;">
+      <div class="border border-dark" style= "background-color: red; height: 80%; margin: 10%; display: flex; align-items: center; text-align: center; " > Esto es una foto</div>
+    </div>
+    <div class="col-6">
+      <h3>{{element.nombre}}</h3>
+    </div>
+    <div class="col">
+
+
+
+      <button *ngIf="element.statususer === 2" type="button" class="btn btn-success ml-5 border border-dark border-5">Amigo</button>
+      <button *ngIf="element.statususer !== 2" type="button" class="btn btn-success ml-5">Amigo</button>
+
+      <button *ngIf="element.statususer === 1" type="button" class="btn btn-warning ml-5 border border-dark border-5">Conocido</button>
+      <button *ngIf="element.statususer !== 1" type="button" class="btn btn-warning ml-5">Conocido</button>
+
+      <button type="button" class="btn btn-danger ml-5">Deshacer</button>
+    </div>
+  </div>
+
+
+  </div>
+
+
