--- a/frontend/src/app/components/signin/signin.component.html
+++ b/frontend/src/app/components/signin/signin.component.html
@@ -8,7 +8,7 @@
               <div class="card-body">
                   <form (submit)="signIn()">
                       <div class="form-group">
-                          <input type="text" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required>
+                          <input type="email" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required>
                       </div>
                       <div class="form-group">
                           <input type="password" [(ngModel)]="user.password" name="password" class="form-control" placeholder="Password" required>
