--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -16,7 +16,7 @@
                         <input type="text" [(ngModel)]="user.apellido" name="apellido" class="form-control" placeholder="Apellidos" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required>
+                        <input type="email" [(ngModel)]="user.email" name="email" class="form-control" placeholder="Email" required>
                     </div>
                     <div class="form-group">
                         <input type="password" [(ngModel)]="user.password" name="password" class="form-control" placeholder="Password" required>
